$Id: History,v 1.2 1999-01-08 11:23:48 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

December 17th 1998  J.Allison  (global-00-04-03)
- Added first version of STL interface.

December 2, 1998 M.Asai (global-00-04-02)
- Remove the construction of G4UnitsMessenger in G4UnitsTable. This messenger is
  constructed/destructed by G4UImanager to avoid a loop dependency.

December 1, 1998 G.Cosmo (global-00-04-01)
- Removed G4Allocator.cc containing all template declarations for GNU-g++
  compiler not supported anymore.
- Removed g4templates.hh contining all template declarations for the old
  DEC cxx 5.X compiler not supported anymore.
- Moved G4ParticleTypes.hh to particles/management/include to remove
  dependency over particles category.
- Updated management/GNUmakefile: not anymore dependencies over external
  categories. Dependency over intercoms to be fixed still.

December 1, 1998 M.Nagamatu, H Yoshida
- G4ios.cc guarded by G4STREAM

November 27, 98 M.Asai
- G4UnitsMessenger has been moved to intercoms category to avoid a loop dependency.

November 12, 98 K. Amako (global-00-03-05)
- Corrected a bug in the GetVectorLength() method of 
  management/src/G4PhysicsVector.cc. The fixed bug has nothing