@@ -1,4 +1,4 @@
-$Id: History,v 1.2 1999-01-08 11:23:48 gunter Exp $
+$Id: History,v 1.3 1999-03-18 15:06:25 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+March 18th  John Allison
+- globals.hh: Added #ifdef G4USE_STL, changed position of
+  #include <rw/cstring.h>.
 
 December 17th 1998  J.Allison  (global-00-04-03)
 - Added first version of STL interface.
